--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 
 
 [dependencies]
+aho-corasick = "1.1.3"
 clap = { version = "4.5.27", features = ["cargo", "derive"] }
 derive-getters = "0.5.0"
 derive_builder = "0.20.2"
@@ -25,6 +26,7 @@ dotenv = "0.15.0"
 inquire = "0.7.5"
 kalosm = { version = "0.3.2", features = ["language"] }
 mongodb = "3.2.0"
+reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
 serde_json = "1.0.137"
 tokio = { version = "1.43.0", features = ["full"] }
